# dorset

./: .gitignore  Cargo.toml  README.md  README.org
src/: lib.rs
src/core/: chainable.rs  constants.rs  memory.rs  mod.rs  types.rs  var.rs  vari.rs
src/macros/: binop.rs  cstack.rs  mod.rs  new_vari_type.rs  ref_binop.rs  uniop.rs  var.rs  var_binop.rs  var_uniop.rs  vari_impl.rs  vari_type.rs
src/operations/: add.rs  cos.rs  div.rs  grad.rs  ln.rs  log.rs  mod.rs  mul.rs  operand.rs  pow.rs  sin.rs  sub.rs
